--- a/Analysis.rmd
+++ b/Analysis.rmd
@@ -4,6 +4,10 @@ author: "Andrae Ladores"
 date: "03/12/2021"
 output: html_document
 bibliography: references.bib
+params:
+  state: "Californnia"
+  data: "data/raw_data/applemobilitytrends-2021-03-05.csv"
+    
 ---
 
 ```{r setup, include=FALSE}
@@ -14,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE, message = TRUE)
 
 ```{r set-parameters}
 # Set the state to work with
-state_to_analyze <- "North Carolina"
+state_to_analyze <- params$state
 
 # sanitizing the state name for output files
 state_no_space <- gsub(state_to_analyze,
@@ -22,7 +26,7 @@ state_no_space <- gsub(state_to_analyze,
                        replacement = "_")
 
 # set the name of the global data file to use
-global_file_to_process <- "data/raw_data/applemobilitytrends-2021-03-05.csv"
+global_file_to_process <- params$data
 
 # extract core name for output file naming use
 core_name <- tools::file_path_sans_ext(basename(global_file_to_process))
