--- a/Analysis.rmd
+++ b/Analysis.rmd
@@ -1,13 +1,13 @@
 ---
 title: "Analysis of COVID-era Apple Mobility Data"
 author: "Andrae Ladores"
-date: "03/12/2021"
+date: "04/13/2021"
 output: html_document
 bibliography: references.bib
 params:
   state: "Californnia"
   data: "data/raw_data/applemobilitytrends-2021-03-05.csv"
-    
+  seqdata: "output/sequence_summary.txt"  
 ---
 
 ```{r setup, include=FALSE}
@@ -168,6 +168,33 @@ ggsave(plot = timeseries_walking_plot,
 timeseries_walking_plot
 ```
 
+
+```{r plot-sequence-data, fig.height=12}
+# read in the count of the sequences by country (2 columns)
+seqs_by_country <- readr:read_table(params$seqdata,
+                                    col_names = c("count",
+                                                  "country"))
+
+# check that we have the right number of columns
+stopifnot(ncol(seqs_by_country) == 2)
+
+
+# make a sideways barplot, log scale x axis with countries on the y
+# and the counts of sequences in each of the x, sorted by count
+seq_count_plot <- ggplot(data = seqs_by_country,
+                         aes(x = count,
+                             y = reorder(country, count))) +
+ geom_col() +
+ scale_x_log10() +
+ labs(title = "Count of SARS-CoV-2 sequences per country",
+      x = "Count of Sequences",
+      y = "Country Name")
+
+ggsave(plot = seq_count_plot,
+       filename = "output/figures/seq_count_plot.png")
+
+seq_count_plot
+```
 
 ## Session Info
 
