--- a/Analysis.rmd
+++ b/Analysis.rmd
@@ -7,7 +7,7 @@ bibliography: references.bib
 params:
   state: "Californnia"
   data: "data/raw_data/applemobilitytrends-2021-03-05.csv"
-  seqdata: "output/sequence_summary.txt"  
+  seqdata: "output/sequence_summary.txt"
 ---
 
 ```{r setup, include=FALSE}
@@ -171,7 +171,7 @@ timeseries_walking_plot
 
 ```{r plot-sequence-data, fig.height=12}
 # read in the count of the sequences by country (2 columns)
-seqs_by_country <- readr:read_table(params$seqdata,
+seqs_by_country <- readr::read_table(params$seqdata,
                                     col_names = c("count",
                                                   "country"))
 
@@ -184,9 +184,9 @@ stopifnot(ncol(seqs_by_country) == 2)
 seq_count_plot <- ggplot(data = seqs_by_country,
                          aes(x = count,
                              y = reorder(country, count))) +
- geom_col() +
- scale_x_log10() +
- labs(title = "Count of SARS-CoV-2 sequences per country",
+  geom_col() +
+  scale_x_log10() +
+  labs(title = "Count of SARS-CoV-2 sequences per country",
       x = "Count of Sequences",
       y = "Country Name")
 
